<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:padding="20dp"
        android:gravity="bottom"
        android:background="#D85851">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_avatar"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/ic_avatar_default"/>
        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tiến Dũng"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            android:textStyle="bold"
            android:textColor="@color/white"/>
        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="tienDung@gmail.com"
            android:textSize="14sp"
            android:textColor="@color/white"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_info_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16sp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#6b6b47"
            android:drawablePadding="10dp"
            android:maxLines="1"
            android:text="@string/nav_my_profile"
            app:drawableLeftCompat="@drawable/ic_my_profile" />


    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:background="@android:color/black" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16sp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#6b6b47"
            android:drawablePadding="10dp"
            android:maxLines="1"
            android:text="@string/history"
            app:drawableLeftCompat="@drawable/ic_history" />


    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:background="@android:color/black" />
    <LinearLayout
        android:id="@+id/ll_change_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16sp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#6b6b47"
            android:drawablePadding="10dp"
            android:maxLines="1"
            android:text="@string/nav_change_password"
            app:drawableLeftCompat="@drawable/ic_change_password" />


    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:background="@android:color/black" />
    <LinearLayout
        android:id="@+id/ll_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16sp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#6b6b47"
            android:drawablePadding="10dp"
            android:maxLines="1"
            android:text="@string/nav_sign_out"
            app:drawableLeftCompat="@drawable/ic_exit" />


    </LinearLayout>
</LinearLayout>