<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical">


    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/nobi" />
    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"

        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/admin"
            android:textStyle="bold"
            android:textSize="24sp"/>

    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:weightSum="3">


        <androidx.cardview.widget.CardView
            android:id="@+id/cv_facebook"
            android:layout_width="0dp"
            android:layout_margin="10dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20dp"
            android:layout_gravity="center"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_facebook"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/facebook_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center"
                    android:text="@string/facebook"
                    android:textStyle="bold"
                    android:textSize="16sp"/>

            </LinearLayout>


        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/cv_zalo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:cardCornerRadius="20dp"
            android:layout_weight="1">

            <LinearLayout

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_zalo"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/zalo_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center"
                    android:text="@string/zalo_phone"
                    android:textStyle="bold"
                    android:textSize="16sp"/>

            </LinearLayout>


        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:id="@+id/cv_gmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20dp"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img_email"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/gmail_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:text="@string/gmail" />

            </LinearLayout>


        </androidx.cardview.widget.CardView>




    </LinearLayout>


</LinearLayout>